# GraficosPracticaFinal

LightComponent/: CAMERA.h  P1GLSL.vcxproj  P1GLSL.vcxproj.filters
LightComponent/Debug/: P1GLSL.exe.recipe  P1GLSL.ilk  P1GLSL.vcxproj.FileListAbsolute.txt  vc145.idb
LightComponent/Debug/P1GLSL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  P1GLSL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LightComponent/scr/: main.cpp
Práctica 1/Practica/: P1GLSL.vcxproj  P1GLSL.vcxproj.filters
Práctica 1/Practica/scr/: main.cpp
Práctica 1/shaders_P1/: shader.final.frag  shader.final.vert  shader.v0.frag  shader.v0.vert  shader.v1.vert  shader.v2.frag  shader.v2.vert  shader.v3.vert  shader.v4.vert  shader.v45frag  shader.v5.frag  shader.v5.vert  shader.v6.frag  shader.v6.vert
Práctica 2/LightComponent/LightComponent/LightComponent/: CAMERA.h  P1GLSL.vcxproj  P1GLSL.vcxproj.filters
Práctica 2/LightComponent/LightComponent/LightComponent/scr/: main.cpp  mushroom_04.h
Práctica 2/LightComponent/LightComponent/shaders_P1/: shader.v0.frag  shader.v0.vert
Práctica 2/figures/: obj_to_header.py
Práctica 3/P3OGL/scr/: auxiliar.cpp  main.cpp
graficos_parte2/: CMakeLists.txt  README.md
graficos_parte2/shaders/: shader.v2.frag  shader.v3.frag  shader.v4.frag  shader.v5.vert
graficos_parte2/src/: BOX.h  main.cpp
shaders_P1/: shader.v0.frag  shader.v0.vert
